fixed overflow

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,7 +10,7 @@ body{
         font-weight: 300;
     }
    
-    overflow: idden;
+    overflow: hidden;
 }
 
 
